# soma

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  entrypoint.sh  lefthook.yml  mcp-server-inventory.md  server.json  soma-architecture-refactor-plan-v3.md
crates/soma-gateway/: Cargo.toml
crates/soma-gateway/src/: config.rs  config_tests.rs  upstream.rs
crates/soma-gateway/src/config/: defaults.rs  defaults_tests.rs  protected_routes.rs  protected_routes_tests.rs  upstream.rs  upstream_tests.rs
crates/soma-gateway/src/gateway/: catalog.rs  catalog_tests.rs  dispatch.rs  dispatch_tests.rs  manager.rs  manager_tests.rs  params.rs  projection.rs  projection_tests.rs  view_models.rs  view_models_tests.rs
crates/soma-gateway/src/gateway/manager/: core.rs  core_tests.rs  pool_lifecycle_tests.rs  protected_routes.rs  protected_routes_tests.rs  virtual_servers.rs  virtual_servers_tests.rs
crates/soma-gateway/src/security/: redact.rs  redact_tests.rs
crates/soma-gateway/src/upstream/: http_client.rs  http_client_tests.rs  pool.rs  pool_tests.rs
crates/soma-gateway/src/upstream/pool/: discovery.rs  discovery_tests.rs  health_tests.rs  prompts.rs  prompts_tests.rs  resources.rs  resources_tests.rs  tools.rs  (+1 more)
crates/soma/contracts/: Cargo.toml
crates/soma/contracts/src/: actions.rs  actions_tests.rs  config.rs  config_tests.rs  env_registry.rs  env_registry_tests.rs  errors.rs  errors_tests.rs  provider_validation.rs  provider_validation_tests.rs  providers.rs  scopes.rs  scopes_tests.rs  token_limit.rs  token_limit_tests.rs
(+278 files in other folders)
