[package]
name = "soma-gateway"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Self-contained gateway runtime for Soma MCP aggregation"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[features]
default = []
oauth = ["dep:soma-auth", "soma-auth/upstream-oauth-rmcp"]
codemode = []
openapi = ["codemode"]
palette = ["codemode"]
protected-routes = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soma-auth = { path = "../soma-auth", optional = true, default-features = false }
thiserror = "2"
toml = "1.1"
url = "2"

[dev-dependencies]
tempfile = "3"
