[package]
name = "soma-contracts"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Deprecated compatibility facade over soma-config/soma-domain/soma-provider-core (plan section 6.2); do not add new types"
homepage.workspace = true
license = "MIT"
repository.workspace = true
publish = false

[package.metadata.soma-architecture]
layer = "legacy"

[dependencies]
soma-config = { workspace = true }
soma-domain = { workspace = true }
soma-provider-core = { workspace = true }

[dev-dependencies]
serde_json = "1"
